Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-136550

QMYSQL: QT application built with libmariadb3.4 won't connect to MariaDB 10

    XMLWordPrintable

Details

    • Bug
    • Resolution: Fixed
    • P3: Somewhat important
    • 6.11.0 FF
    • 6.9.0
    • SQL Support
    • openSUSE Tumbleweed 20250428
    • All
    • dbbe65fb2 (dev), 304089b6d (6.9), fc944fe6f (tqtc/lts-6.8), a66dbb19e (dev)

    Description

       

      MariaDB 11.4 and (more importantly here) their C connector version 3.4 enable SSL mode by default for all non-local connections as described in https://mariadb.com/kb/en/securing-connections-for-client-and-server/. Support for MYSQL_OPT_SSL_MODE was added as part of QTBUG-84797 but, unfortunately, only for MySQL:

      Without support for this parameter, I can't disable SSL for the MySQL plugin that I'm using from Digikam.

      Moreover, even if I'd set up my NAS with SSL, without support for MYSQL_OPT_SSL_VERIFY_SERVER_CERT, I wouldn't be able to connect anyway as I don't have a valid certificate.

      Alternatively to implementing custom options could be to provide the ability to pass a custom options file - see https://mariadb.com/kb/en/configuring-mariadb-connectorc-with-option-files/ for details. This may be future-proof and allow all sorts of customisations.

      Attachments

        Issue Links

          For Gerrit Dashboard: QTBUG-136550
          # Subject Branch Project Status CR V

          Activity

            People

              chehrlic Christian Ehrlicher
              nicok Nico Kruber
              Votes:
              0 Vote for this issue
              Watchers:
              3 Start watching this issue

              Dates

                Created:
                Updated:
                Resolved: